<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp">

    <EditText
        android:id="@+id/addEntryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_label"
        android:importantForAutofill="no"
        android:inputType="text" />

    <ImageView
        android:id="@+id/addEntryImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/quiz_gallery_image"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/addEntryButtonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/addEntryButtonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp" />
</LinearLayout>